--- a/Desktop/合作團隊/智慧物聯感測漁業/SDGs關聯目標.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/SDGs關聯目標.html
@@ -33,6 +33,13 @@
         padding: 0 48px;
     }
 
+    @media (max-width: 767px) {
+        .sdg-icon {
+            padding: 0;
+            width: 120px;
+        }
+    }
+
     .sdg-target-container {
         position: relative;
         background: url('https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/790393737.png');
