--- a/Desktop/合作團隊/智慧物聯感測漁業/亮點成果.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/亮點成果.html
@@ -1,86 +1,84 @@
-<section class="d-none d-lg-block">
-    <div class="collaborative-partner-highlight-container">
-        <h1 class="w-100 text-center collaborative-partner-highlight-title">亮點成果</h1>
+<div class="collaborative-partner-highlight-container">
+    <h1 class="w-100 text-center collaborative-partner-highlight-title">亮點成果</h1>
 
-        <div class="collaborative-partner-highlight-contents-container w-100">
-            <div class="d-flex flex-column bd-highlight pl-3 mb-3">
-                <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
-                    data-aos-duration="1000">
-                    <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
-                        style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/2.png);"></div>
+    <div class="collaborative-partner-highlight-contents-container w-100">
+        <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+            <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
+                data-aos-duration="1000">
+                <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
+                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/2.png);"></div>
 
-                    <div class="col-12 col-lg-7 mt-5 mt-lg-0">
-                        <div class="d-flex flex-column bd-highlight pl-3 mb-3">
-                            <div class="collaborative-partner-highlight-content-title">
-                                <p>跨域全齡商品設計開發</p>
-                            </div>
+                <div class="col-12 col-lg-7 mt-5 mt-lg-0">
+                    <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+                        <div class="collaborative-partner-highlight-content-title">
+                            <p>跨域全齡商品設計開發</p>
+                        </div>
 
-                            <div class="collaborative-partner-highlight-content">
-                                <p class="ellipsis-line-5">
-                                    「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
-                                </p>
-                            </div>
+                        <div class="collaborative-partner-highlight-content">
+                            <p class="ellipsis-line-5">
+                                「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
+                            </p>
+                        </div>
 
-                            <div
-                                class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
-                                <span>課程介紹</span>
-                            </div>
+                        <div
+                            class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
+                            <span>課程介紹</span>
                         </div>
                     </div>
                 </div>
-
-                <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
-                    data-aos-duration="1000">
-                    <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
-                        style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png);"></div>
-                    <div class="col-12 col-lg-7 mt-5 mt-lg-0">
-                        <div class="d-flex flex-column bd-highlight pl-3 mb-3">
-                            <div class="collaborative-partner-highlight-content-title">
-                                <p>原住民安居構築與綠色樂業推動計畫</p>
-                            </div>
-
-                            <div class="collaborative-partner-highlight-content">
-                                <p class="ellipsis-line-5">
-                                    「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
-                                </p>
-                            </div>
-
-                            <div
-                                class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
-                                <span>課程介紹</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
-                    data-aos-duration="1000">
-                    <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
-                        style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/4.png);"></div>
-                    <div class="col-12 col-lg-7 mt-5 mt-lg-0">
-                        <div class="d-flex flex-column bd-highlight pl-3 mb-3">
-                            <div class="collaborative-partner-highlight-content-title">
-                                <p>原住民安居構築與綠色樂業推動計畫</p>
-                            </div>
-
-                            <div class="collaborative-partner-highlight-content">
-                                <p class="ellipsis-line-4">
-                                    「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
-                                </p>
-                            </div>
-
-                            <div
-                                class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
-                                <span>課程介紹</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
+
+            <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
+                data-aos-duration="1000">
+                <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
+                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png);"></div>
+                <div class="col-12 col-lg-7 mt-5 mt-lg-0">
+                    <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+                        <div class="collaborative-partner-highlight-content-title">
+                            <p>原住民安居構築與綠色樂業推動計畫</p>
+                        </div>
+
+                        <div class="collaborative-partner-highlight-content">
+                            <p class="ellipsis-line-5">
+                                「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
+                            </p>
+                        </div>
+
+                        <div
+                            class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
+                            <span>課程介紹</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
+                data-aos-duration="1000">
+                <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
+                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/4.png);"></div>
+                <div class="col-12 col-lg-7 mt-5 mt-lg-0">
+                    <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+                        <div class="collaborative-partner-highlight-content-title">
+                            <p>原住民安居構築與綠色樂業推動計畫</p>
+                        </div>
+
+                        <div class="collaborative-partner-highlight-content">
+                            <p class="ellipsis-line-4">
+                                「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
+                            </p>
+                        </div>
+
+                        <div
+                            class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
+                            <span>課程介紹</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-</section>
+</div>
 
 <style type="text/css">
     .collaborative-partner-highlight-container {
@@ -100,7 +98,25 @@
     }
 
     .collaborative-partner-highlight-content-container {
-        padding: 55px 250px;
+        padding: 55px 50px;
+    }
+
+    @media (min-width: 767px) {
+        .collaborative-partner-highlight-content-container {
+            padding: 55px 100px;
+        }
+    }
+
+    @media (min-width: 1023px) {
+        .collaborative-partner-highlight-content-container {
+            padding: 55px 150px;
+        }
+    }
+
+    @media (min-width: 1366px) {
+        .collaborative-partner-highlight-content-container {
+            padding: 55px 250px;
+        }
     }
 
     .collaborative-partner-highlight-content-title {
@@ -136,8 +152,14 @@
     }
 
     .collaborative-partner-highlight-content-image {
+        min-height: 250px;
         background-repeat: no-repeat !important;
-        background-size: cover !important;
+        background-size: contain !important;
+    }
+
+    @media (min-width: 767px) {
+        .collaborative-partner-highlight-content-image {
+            min-height: 500px;
+        }
     }
 </style>
-</div>
