--- a/Desktop/合作團隊/智慧物聯感測漁業/合作團隊簡介.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/合作團隊簡介.html
@@ -1,12 +1,10 @@
-<section class="d-none d-lg-block">
-    <div class="collaborative-partner-intro-container">
-        <p class="collaborative-partner-intro-content">
-            為了幫助口湖鄉解決養殖上的一些困難，化工、資工、經管系將工業級感測器，並帶到地方文蛤池，監控水中的酸鹼度、氧化還原、溶氧量、溫度。搭配遠端伺服器與手機APP結合，就算人不再現場也能隨時知道文蛤池的狀況，當某一數據達到不理想情況
-            時，能立即知道水質發生何種問題，並加以解決，顛覆傳統以看水池顏色或是以水就口的方式，更能達到池內的理想狀態，進而提高產量。<br><br>再者，我們持續開發與連絡口湖地方上的相關夥伴，如雲林縣口湖鄉埔北社區發展協會的理事長，藉由與他的深度訪談，可以了
-            解雲林的真實情況還有他們的需求，並且詢問他們對於農林漁牧業導入科技的態度，最重要的是在訪談結束後與團隊討論，要如何發揮我們在大學所學知識給予他們需要的協助，期望可以改善他們目前的情況。<br>
-        </p>
-    </div>
-</section>
+<div class="collaborative-partner-intro-container">
+    <p class="collaborative-partner-intro-content">
+        為了幫助口湖鄉解決養殖上的一些困難，化工、資工、經管系將工業級感測器，並帶到地方文蛤池，監控水中的酸鹼度、氧化還原、溶氧量、溫度。搭配遠端伺服器與手機APP結合，就算人不再現場也能隨時知道文蛤池的狀況，當某一數據達到不理想情況
+        時，能立即知道水質發生何種問題，並加以解決，顛覆傳統以看水池顏色或是以水就口的方式，更能達到池內的理想狀態，進而提高產量。<br><br>再者，我們持續開發與連絡口湖地方上的相關夥伴，如雲林縣口湖鄉埔北社區發展協會的理事長，藉由與他的深度訪談，可以了
+        解雲林的真實情況還有他們的需求，並且詢問他們對於農林漁牧業導入科技的態度，最重要的是在訪談結束後與團隊討論，要如何發揮我們在大學所學知識給予他們需要的協助，期望可以改善他們目前的情況。<br>
+    </p>
+</div>
 
 <style type="text/css">
     .collaborative-partner-intro-container {
@@ -14,9 +12,23 @@
     }
 
     .collaborative-partner-intro-content {
-        padding: 200px 250px;
-        font-size: 25px;
+        padding: 50px 50px;
+        font-size: 20px;
         line-height: 1.6;
         color: #707070;
+    }
+
+    @media (min-width: 767px) {
+        .collaborative-partner-highlight-content-container {
+            padding: 100px 100px;
+            font-size: 25px;
+        }
+    }
+
+    @media (min-width: 1366px) {
+        .collaborative-partner-intro-content {
+            padding: 200px 250px;
+            font-size: 25px;
+        }
     }
 </style>
