--- a/Desktop/合作團隊/智慧物聯感測漁業/合作團隊成員.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/合作團隊成員.html
@@ -1,52 +1,50 @@
-<section class="d-none d-lg-block">
-    <div class="collaborative-partner-member-container">
-        <h1 class="w-100 text-center collaborative-partner-member-title">團 隊 成 員</h1>
-        <div class="collaborative-partner-member-content-container w-100">
-            <div class="row text-center justify-content-around">
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/139540727.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">陳生明 專任教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：化學工程與生物科技系</p>
-                    </div>
+<div class="collaborative-partner-member-container">
+    <h1 class="w-100 text-center collaborative-partner-member-title">團 隊 成 員</h1>
+    <div class="collaborative-partner-member-content-container w-100">
+        <div class="row text-center justify-content-around">
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/139540727.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">陳生明 專任教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：化學工程與生物科技系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/728190617.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">陳彥霖 專任副教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：資訊工程系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/728190617.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">陳彥霖 專任副教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：資訊工程系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/648838795.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">耿慶瑞 專任教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：經營管理系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/648838795.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">耿慶瑞 專任教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：經營管理系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/368226921.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">劉祐綸 專任助理教授</p>
-                        <p class="collaborative-partner-member-content-department">單位：經營管理系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/368226921.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">劉祐綸 專任助理教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：經營管理系</p>
                 </div>
-                <div class="collaborative-partner-member-content col-6 col-xl-3">
-                    <div class="d-flex flex-column align-items-center" data-aos="flip-left">
-                        <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/599328654.png" alt="成員照片"
-                            width="174" height="174">
-                        <p class="collaborative-partner-member-content-name">余兆偉 博士後研究員</p>
-                        <p class="collaborative-partner-member-content-department">單位：資訊工程系</p>
-                    </div>
+            </div>
+            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/599328654.png" alt="成員照片" width="174"
+                        height="174">
+                    <p class="collaborative-partner-member-content-name">余兆偉 博士後研究員</p>
+                    <p class="collaborative-partner-member-content-department">單位：資訊工程系</p>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
 
 <style>
     .collaborative-partner-member-container {
@@ -62,7 +60,13 @@
     }
 
     .collaborative-partner-member-content-container {
-        padding: 0 250px 92px;
+        padding: 0 50px 92px;
+    }
+
+    @media (min-width: 1366px) {
+        .collaborative-partner-member-content-container {
+            padding: 0 250px 92px;
+        }
     }
 
     .collaborative-partner-member-content {
