--- a/Desktop/關於我們/組織成員.html
+++ b/Desktop/關於我們/組織成員.html
@@ -1,125 +1,152 @@
-<section class="d-none d-lg-block" id="Section_Organization_Member">
+<section id="Section_Organization_Member">
     <div class="float-on-bg bg-white organization-member-container">
         <p class="float-on-bg bg-white organization-member-title w-100 text-center">組織成員</p>
-        <!-- 01 -->
 
-        <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
-            <div><img class="organization-member-image"
-                    src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/581610774.png" /></div>
-
-            <div class="d-flex flex-column justify-content-center">
-                <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                    <p class="organization-member-name">王錫福 教授(校長)</p>
-                </div>
-
+        <div>
+            <!-- 01 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-right">
                 <div>
-                    <p class="organization-member-content">職位:主 任<br />
-                        學校分機:(02)2771-2171 #1001</p>
-                </div>
-            </div>
-        </div>
-        <!-- 02 -->
-
-        <div class="d-flex align-items-center organization-member-list" data-aos="fade-left">
-            <div class="d-flex flex-column justify-content-center">
-                <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                    <p class="organization-member-name">楊重光 教授(副校長)</p>
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/581610774.png" />
                 </div>
 
-                <div>
-                    <p class="organization-member-content">職位:副 主 任<br />
-                        學校分機:(02)2771-2171 #1071</p>
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">王錫福 教授(校長)</p>
+                    </div>
+
+                    <div>
+                        <p class="organization-member-content">職位:主 任<br />
+                            學校分機:(02)2771-2171 #1001</p>
+                    </div>
                 </div>
             </div>
+            <!-- 02 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-left">
+                <div class="d-block d-md-none">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/417200873.png" />
+                </div>
 
-            <div><img class="organization-member-image"
-                    src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/417200873.png" /></div>
-        </div>
-    </div>
-    <!-- 03 -->
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">楊重光 教授(副校長)</p>
+                    </div>
 
-    <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
-        <div><img class="organization-member-image"
-                src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png" /></div>
+                    <div>
+                        <p class="organization-member-content">職位:副 主 任<br />
+                            學校分機:(02)2771-2171 #1071</p>
+                    </div>
+                </div>
 
-        <div class="d-flex flex-column justify-content-center">
-            <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                <p class="organization-member-name">黃志弘 教授(設計學院院長)</p>
+                <div class="d-none d-md-block">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/417200873.png" />
+                </div>
             </div>
+            <!-- 03 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-right">
+                <div><img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png" /></div>
 
-            <div>
-                <p class="organization-member-content">職位:執行長<br />
-                    學校分機:(02)2771-2171 #2915</p>
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">黃志弘 教授(設計學院院長)</p>
+                    </div>
+
+                    <div>
+                        <p class="organization-member-content">職位:執行長<br />
+                            學校分機:(02)2771-2171 #2915</p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <!-- 04 -->
+            <!-- 04 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-left">
 
-    <div class="d-flex align-items-center organization-member-list" data-aos="fade-left">
-        <div class="d-flex flex-column justify-content-center">
-            <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                <p class="organization-member-name">陳建文 教授(通識中心主任)</p>
+                <div class="d-block d-md-none">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/729337629.png" />
+                </div>
+
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">陳建文 教授(通識中心主任)</p>
+                    </div>
+
+                    <div>
+                        <p class="organization-member-content">職位:策略組長<br />
+                            學校分機:(02)2771-2171 #3001、3026</p>
+                    </div>
+                </div>
+
+                <div class="d-none d-md-block">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/729337629.png" />
+                </div>
             </div>
+            <!-- 05 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-right">
+                <div><img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/404100551.png" /></div>
 
-            <div>
-                <p class="organization-member-content">職位:策略組長<br />
-                    學校分機:(02)2771-2171 #3001、3026</p>
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">楊琇惠 教授(文化事業發展學系主任)</p>
+                    </div>
+
+                    <div>
+                        <p class="organization-member-content">職位:實踐組長<br />
+                            學校分機:(02)2771-2171 #5601</p>
+                    </div>
+                </div>
             </div>
-        </div>
+            <!-- 06 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-left">
+                <div class="d-block d-md-none">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/563741094.png" />
+                </div>
 
-        <div><img class="organization-member-image"
-                src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/729337629.png" /></div>
-    </div>
-    <!-- 05 -->
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">張佳琳 小姐</p>
+                    </div>
 
-    <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
-        <div><img class="organization-member-image"
-                src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/404100551.png" /></div>
+                    <div>
+                        <p class="organization-member-content">職位:專任助理<br />
+                            學校分機:(02)2771-2171 #1220<br />
+                            Email: lynnchang@mail.ntut.edu.tw</p>
+                    </div>
+                </div>
 
-        <div class="d-flex flex-column justify-content-center">
-            <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                <p class="organization-member-name">楊琇惠 教授(文化事業發展學系主任)</p>
+                <div class="d-none d-md-block">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/563741094.png" />
+                </div>
             </div>
+            <!-- 07 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-right">
+                <div><img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/401269290.png" /></div>
 
-            <div>
-                <p class="organization-member-content">職位:實踐組長<br />
-                    學校分機:(02)2771-2171 #5601</p>
-            </div>
-        </div>
-    </div>
-    <!-- 06 -->
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">陳國華 先生</p>
+                    </div>
 
-    <div class="d-flex align-items-center organization-member-list" data-aos="fade-left">
-        <div class="d-flex flex-column justify-content-center">
-            <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                <p class="organization-member-name">張佳琳 小姐</p>
-            </div>
-
-            <div>
-                <p class="organization-member-content">職位:專任助理<br />
-                    學校分機:(02)2771-2171 #1220<br />
-                    Email: lynnchang@mail.ntut.edu.tw</p>
-            </div>
-        </div>
-
-        <div><img class="organization-member-image"
-                src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/563741094.png" /></div>
-    </div>
-    <!-- 07 -->
-
-    <div class="d-flex align-items-center organization-member-list" data-aos="fade-right">
-        <div><img class="organization-member-image"
-                src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/401269290.png" /></div>
-
-        <div class="d-flex flex-column justify-content-center">
-            <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                <p class="organization-member-name">陳國華 先生</p>
-            </div>
-
-            <div>
-                <p class="organization-member-content">職位:專任助理<br />
-                    學校分機:(02)2771-2171 #1221<br />
-                    Email: heywoo1234@mail.ntut.edu.tw</p>
+                    <div>
+                        <p class="organization-member-content">職位:專任助理<br />
+                            學校分機:(02)2771-2171 #1221<br />
+                            Email: heywoo1234@mail.ntut.edu.tw</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -136,18 +163,13 @@
         color: #4998b2;
     }
 
-    .organization-member-list:nth-child(even) {
+    .organization-member-list {
         margin-bottom: 54px;
-        margin-left: 284px;
-    }
-
-    .organization-member-list:nth-child(odd) {
-        margin-bottom: 54px;
-        margin-left: 914px;
+        padding: 0 50px;
     }
 
     .organization-member-image {
-        margin: 0 53px;
+        margin: 0 5px;
     }
 
     .organization-member-wrapper {
@@ -170,12 +192,32 @@
     .organization-member-content {
         margin: 56px 29px 0px 29px;
         font-size: 25px;
-        font-weight: normal;
-        font-stretch: normal;
-        font-style: normal;
         line-height: 1.6;
-        letter-spacing: normal;
         text-align: left;
         color: #4e4e4e;
+    }
+
+    @media (min-width: 1023px) {
+        .organization-member-list {
+            padding: 0 150px;
+        }
+    }
+
+    @media (min-width: 1366px) {
+        .organization-member-list {
+            padding: 0;
+        }
+
+        .organization-member-list:nth-child(even) {
+            margin-left: 284px;
+        }
+
+        .organization-member-list:nth-child(odd) {
+            margin-left: 914px;
+        }
+
+        .organization-member-image {
+            margin: 0 53px;
+        }
     }
 </style>
