--- a/Desktop/關於我們/背景圖.html
+++ b/Desktop/關於我們/背景圖.html
@@ -1,4 +1,4 @@
-<section class="d-none d-lg-block">
+<section>
     <div class="about-us-background"></div>
     <img class="planets-background" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/574715321.png"
         data-aos="zoom-in" data-aos-offset="0" data-aos-delay="300" data-aos-duration="500">
