--- a/Desktop/合作團隊/小選單.html
+++ b/Desktop/合作團隊/小選單.html
@@ -3,39 +3,41 @@
     <span class="hambuger-line-two mt-2"></span>
     <span class="hambuger-line-three mt-2"></span>
 </div>
-<div id="collaborative-partner-menu" class="collaborative-partner-menu" onmouseleave=" triggerMenu()">
+<div id="collaborative-partner-menu" class="collaborative-partner-menu pr-5" onmouseleave=" triggerMenu()">
     <div class="d-flex flex-column menu-content-container">
-        <div class="menu-title">○ 109-110學年度</div>
-        <div class="menu-sub-title">木創文化攪動深根計畫</div>
-        <div class="menu-sub-title">原住民部落安居構築計畫</div>
-        <div class="menu-sub-title">智慧物聯感測漁業</div>
-        <div class="menu-sub-title">陶瓷文化培力</div>
-        <div class="menu-sub-title">營造永續貢學環境</div>
+        <div class="menu-title">○ 109-111學年度</div>
+        <div class="menu-sub-title">原住民部落安居構築與綠色樂業推動計畫</div>
+        <a class="text-decoration-none" href="https://osausr.ntut.edu.tw/p/426-1001-30.php?Lang=zh-tw">
+            <div class="menu-sub-title">木創文化攪動深根計畫</div>
+        </a>
+        <a class="text-decoration-none" href="https://osausr.ntut.edu.tw/p/426-1001-32.php?Lang=zh-tw">
+            <div class="menu-sub-title">智慧物聯感測漁業-實現於雲林口湖鄉</div>
+        </a>
+        <div class="menu-sub-title">陶藝文化培力．鶯歌地方創生</div>
+        <div class="menu-sub-title">營造永續貢學環境-文化扎根與創新</div>
         <div class="menu-sub-title">青銀共創．友善療癒綠社區</div>
+        <div class="menu-sub-title">善循環經濟的實踐</div>
+        <div class="menu-sub-title">VR串聯海上桃花源 (110年新增) 建置中</div>
     </div>
 
     <div class="d-flex flex-column menu-content-container">
         <div class="menu-title">○ 107-108學年度</div>
-        <div class="menu-sub-title">木創文化攪動深根計畫</div>
-        <div class="menu-sub-title">原住民部落安居構築計畫</div>
-        <div class="menu-sub-title">智慧物聯感測漁業</div>
-        <div class="menu-sub-title">陶瓷文化培力</div>
-        <div class="menu-sub-title">營造永續貢學環境</div>
-        <div class="menu-sub-title">青銀共創．友善療癒綠社區</div>
+        <div class="menu-sub-title">原住民部落安居構築與綠色樂業推動計畫</div>
+        <a class="text-decoration-none" href="https://osausr.ntut.edu.tw/p/426-1001-30.php?Lang=zh-tw">
+            <div class="menu-sub-title">木創文化攪動深根計畫</div>
+        </a>
     </div>
 
     <div class="d-flex flex-column menu-content-container">
         <div class="menu-title">○ 106學年度</div>
-        <div class="menu-sub-title">牡丹計畫</div>
+        <div class="menu-sub-title">在地「富育」計畫－牡丹鄉</div>
     </div>
 </div>
-
 <style type="text/css">
     #collaborative-partner-menu {
         display: none;
         position: fixed;
         left: 0;
-        width: 335px;
         height: 100vh;
         box-shadow: 3px 0 20px 0 #9c9c9c;
         background-color: #f5f5f5;
