--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊簡介.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊簡介.html
@@ -1,5 +1,5 @@
 <div class="collaborative-partner-intro-container">
-    <p class="collaborative-partner-intro-content">
+    <p class="collaborative-partner-intro-content" data-aos="zoom-in" data-aos="zoom-in" data-aos-easing="ease-in-sine">
         本案以跨代交流與跨域整合為計畫特色，貫穿與執行計畫。
 
         跨代交流：木創文化深根為兩大核心宗旨之一，透過老、中、青、幼四代的研發、課程、活動規劃，讓木創故事、文化、技術跨代深根。
