--- a/Desktop/合作團隊/智慧物聯感測漁業/心得回饋.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/心得回饋.html
@@ -12,7 +12,7 @@
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="left-triangle"></div>
-            <p class="collaborative-partner-feedback-content">
+            <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(0)" style="cursor: pointer;">
                 在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的
                 過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
             </p>
@@ -32,7 +32,7 @@
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="right-triangle"></div>
-            <p class="collaborative-partner-feedback-content">
+            <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(1)" style="cursor: pointer;">
                 先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。
             </p>
         </div>
@@ -54,10 +54,11 @@
                 <span class="collaborative-partner-feedback-author">化工系：洪丞昱</span>
             </div>
         </span>
-        <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
+        <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(2)"
+            style="cursor: pointer;">
             <div class="left-triangle"></div>
             <p class="collaborative-partner-feedback-content">
-                再加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。
+                在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。
             </p>
         </div>
         <div class="col-2"></div>
@@ -120,3 +121,43 @@
         border-color: transparent transparent transparent #ffffff;
     }
 </style>
+
+<script>
+    const collaborativePartnerFeedbacks = [
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png',
+            'name': '資工系：高于梵',
+            'content': '在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的 過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png',
+            'name': '化工系：黃柏睿',
+            'content': '先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png',
+            'name': '化工系：洪丞昱',
+            'content': '在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。',
+        }
+    ];
+
+    function showFeedbackModal(index) {
+        if (!collaborativePartnerFeedbacks[index]) {
+            return;
+        }
+
+        $('#collaborative-partner-feedback-template').find('#stuentAvatar').attr("src", collaborativePartnerFeedbacks[index].avatar);
+        $('#collaborative-partner-feedback-template').find('#studentName').text(collaborativePartnerFeedbacks[index].name);
+        $('#collaborative-partner-feedback-template').find('#studentFeedback').text(collaborativePartnerFeedbacks[index].content);
+
+
+        Swal.fire({
+            title: '',
+            width: $(window).width() > 1023 ? '60vw' : '100vw',
+            html: $('#collaborative-partner-feedback-template').html(),
+            showCloseButton: true,
+            showConfirmButton: false,
+            showCancelButton: false,
+        });
+    }
+</script>
