更新 學生心得 UI

--- a/Desktop/合作團隊/智慧物聯感測漁業/心得回饋.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/心得回饋.html
@@ -11,7 +11,7 @@
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
-            <div class="left-triangle"></div>
+            <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(0)" style="cursor: pointer;">
                 在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的
                 過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
@@ -31,7 +31,7 @@
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
-            <div class="right-triangle"></div>
+            <div class="right-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(1)" style="cursor: pointer;">
                 先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。
             </p>
@@ -56,7 +56,7 @@
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(2)"
             style="cursor: pointer;">
-            <div class="left-triangle"></div>
+            <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content">
                 在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。
             </p>
