--- a/Desktop/合作團隊/學生心得視窗模板.html
+++ b/Desktop/合作團隊/學生心得視窗模板.html
@@ -3,7 +3,9 @@
         <div class="row p-0 p-md-5">
             <div class="col-md-3">
                 <div class="d-flex flex-column justify-content-center">
-                    <img id="stuentAvatar" class="w-100" alt="學生頭像">
+                    <div id="avatarWrapper" class="w-100 text-center">
+                        <img id="stuentAvatar" class="w-100" alt="學生頭像">
+                    </div>
                     <p id="studentName" class="mt-3"></p>
                 </div>
             </div>
@@ -15,6 +17,10 @@
 </section>
 
 <style>
+    #stuentAvatar {
+        max-width: 174px;
+    }
+
     #studentName {
         font-size: 30px;
         font-family: 'SegoeUI';
