--- a/Desktop/合作團隊/木創文化攪動深根計畫/心得回饋.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/心得回饋.html
@@ -11,7 +11,7 @@
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
-            <div class="left-triangle"></div>
+            <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(0)" style="cursor: pointer;">
                 在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
             </p>
@@ -30,7 +30,7 @@
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
-            <div class="right-triangle"></div>
+            <div class="right-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(1)" style="cursor: pointer;">
                 在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
             </p>
