--- a/Desktop/合作團隊/計畫人員介紹視窗模板.html
+++ b/Desktop/合作團隊/計畫人員介紹視窗模板.html
@@ -6,13 +6,13 @@
                     <div id="avatarWrapper" class="w-100 text-center">
                         <img id="personAvatar" class="w-100" alt="成員頭像">
                     </div>
-                    <p id="personName" class="my-3"></p>
-                    <p id="personFrom"></p>
+                    <p id="personName" class="text-center my-3"></p>
+                    <p id="personFrom" class="text-left"></p>
                 </div>
             </div>
-            <div class="col-md-9 mt-3 mt-lg-0">
+            <div id="template-cintent-warpper" class="col-md-9 mt-3 mt-lg-0">
                 <div class="d-flex flex-column justify-content-center">
-                    <h1 class="font-weight-bold">學術研究專長：</h1>
+                    <h1 class="font-weight-bold text-left">學術研究專長：</h1>
                     <p id="personSkill" class="text-left p-0 mt-md-5"></p>
                     <p id="personIntro" class="text-left p-0 mt-md-5"></p>
                 </div>
@@ -35,7 +35,7 @@
     }
 
     #personFrom {
-        font-size: 35px;
+        font-size: 25px;
         line-height: 1.4;
         letter-spacing: 1.25px;
         color: #707070;
