--- a/Desktop/合作團隊/智慧物聯感測漁業/合作團隊成員.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/合作團隊成員.html
@@ -95,7 +95,7 @@
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/139540727.png',
             'name': '陳生明 教授',
-            'from': '國立台灣大學化學所博士',
+            'from': `國立台灣大學\n化學所博士`,
             'skill': '生物感測器、化學感測器、分析化學、生物燃料電池',
             'intro': '陳生明教授致力於貢獻研究專業、校際學術合作與產學合作，現服務於內政部臺灣化學感測器科技協會，曾接任理事長一職，積極推廣相關所學與教育訓練，讓更多的學生認識化學感測器相關領域之應用，在學術研究教學付出不遺餘力，努力培育科技產業之專業人才。近年努力實踐USR，將學術專業轉移至產業，幫助以養殖漁業為重的雲林口湖鄉。',
         },
