漁業 計畫人員介紹視窗 ok

--- a/Desktop/合作團隊/計畫人員介紹視窗模板.html
+++ b/Desktop/合作團隊/計畫人員介紹視窗模板.html
@@ -6,7 +6,7 @@
                     <div id="avatarWrapper" class="w-100 text-center">
                         <img id="personAvatar" class="w-100" alt="成員頭像">
                     </div>
-                    <p id="personName" class="text-md-left my-5"></p>
+                    <p id="personName" class="text-center my-5"></p>
                     <p id="personFrom" class="text-md-left"></p>
                 </div>
             </div>
@@ -52,6 +52,7 @@
         letter-spacing: 1.75px;
         font-family: 'SegoeUI';
         color: #000000;
+        white-space: nowrap;
     }
 
     #personFrom {
