新增 各合作團隊

--- a/Desktop/合作團隊/小選單.html
+++ b/Desktop/合作團隊/小選單.html
@@ -34,7 +34,9 @@
 
     <div class="d-flex flex-column menu-content-container">
         <div class="menu-title">○ 107-108學年度</div>
-        <div class="menu-sub-title">原住民部落安居構築與綠色樂業推動計畫</div>
+        <a class="text-decoration-none" href="https://osausr.ntut.edu.tw/p/426-1001-36.php?Lang=zh-tw">
+            <div class="menu-sub-title">原住民部落安居構築與綠色樂業推動計畫</div>
+        </a>
         <a class="text-decoration-none" href="https://osausr.ntut.edu.tw/p/426-1001-30.php?Lang=zh-tw">
             <div class="menu-sub-title">木創文化攪動深根計畫</div>
         </a>
